Add HelpCommand + ChannelAccumulatorDisplayer and hasPermission()